tests/feat/30.d
//  30. Exit only in cycle
loop
    print "ok"
    exit  // ok
end

var f := func () is exit; end;  // error
